// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/transfer/demo/advanced.md correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list wmstool-transfer-list-with-footer"
    style="width:250px;height:300px"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body wmstool-transfer-list-body-with-search"
    >
      <div
        class="wmstool-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="wmstool-input wmstool-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="wmstool-transfer-list-search-action"
          >
            <i
              class="anticon anticon-search"
            />
          </span>
        </div>
      </div>
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
    <div
      class="wmstool-transfer-list-footer"
    >
      <button
        class="wmstool-btn wmstool-btn-sm"
        style="float:right;margin:5px"
        type="button"
      >
        <span>
          reload
        </span>
      </button>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
      <span>
        to left
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
      <span>
        to right
      </span>
    </button>
  </div>
  <div
    class="wmstool-transfer-list wmstool-transfer-list-with-footer"
    style="width:250px;height:300px"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body wmstool-transfer-list-body-with-search"
    >
      <div
        class="wmstool-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="wmstool-input wmstool-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="wmstool-transfer-list-search-action"
          >
            <i
              class="anticon anticon-search"
            />
          </span>
        </div>
      </div>
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
    <div
      class="wmstool-transfer-list-footer"
    >
      <button
        class="wmstool-btn wmstool-btn-sm"
        style="float:right;margin:5px"
        type="button"
      >
        <span>
          reload
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/basic.md correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          14 items
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        >
          Source
        </span>
      </span>
    </div>
    <div
      class="wmstool-transfer-list-colums"
    >
      <div>
        <span>
          1
        </span>
        <span>
          2
        </span>
        <span>
          3
        </span>
      </div>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          6 items
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        >
          Target
        </span>
      </span>
    </div>
    <div
      class="wmstool-transfer-list-colums"
    >
      <div>
        <span>
          1
        </span>
        <span>
          2
        </span>
        <span>
          3
        </span>
      </div>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      >
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
        <div
          class="LazyLoad"
          style="height:32px"
        />
      </ul>
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/custom-item.md correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
    style="width:300px;height:300px"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
    style="width:300px;height:300px"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/large-data.md correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body"
    >
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/transfer/demo/search.md correctly 1`] = `
<div
  class="wmstool-transfer"
>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body wmstool-transfer-list-body-with-search"
    >
      <div
        class="wmstool-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="wmstool-input wmstool-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="wmstool-transfer-list-search-action"
          >
            <i
              class="anticon anticon-search"
            />
          </span>
        </div>
      </div>
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
  <div
    class="wmstool-transfer-operation"
  >
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-left"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-primary wmstool-btn-sm wmstool-btn-icon-only"
      disabled=""
      type="button"
    >
      <i
        class="anticon anticon-right"
      />
    </button>
  </div>
  <div
    class="wmstool-transfer-list"
  >
    <div
      class="wmstool-transfer-list-header"
    >
      <label
        class="wmstool-checkbox-wrapper"
      >
        <span
          class="wmstool-checkbox"
        >
          <input
            class="wmstool-checkbox-input"
            type="checkbox"
          />
          <span
            class="wmstool-checkbox-inner"
          />
        </span>
      </label>
      <span
        class="wmstool-transfer-list-header-selected"
      >
        <span>
          0 item
        </span>
        <span
          class="wmstool-transfer-list-header-title"
        />
      </span>
    </div>
    <div
      class="wmstool-transfer-list-body wmstool-transfer-list-body-with-search"
    >
      <div
        class="wmstool-transfer-list-body-search-wrapper"
      >
        <div>
          <input
            class="wmstool-input wmstool-transfer-list-search"
            placeholder="Search here"
            type="text"
            value=""
          />
          <span
            class="wmstool-transfer-list-search-action"
          >
            <i
              class="anticon anticon-search"
            />
          </span>
        </div>
      </div>
      <ul
        class="wmstool-transfer-list-content"
      />
      <div
        class="wmstool-transfer-list-body-not-found"
      >
        Not Found
      </div>
    </div>
  </div>
</div>
`;
